// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn should match snapshot default 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-rgbdu8"
      type="button"
    >
       
      <svg
        class="_tadashi_svelte_btn__ripple svelte-rgbdu8"
        viewBox="0 0 600 600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="svelte-rgbdu8"
          cx="300"
          cy="300"
          r="300"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`Btn should match snapshot props 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn customCss svelte-rgbdu8"
      disabled=""
      type="submit"
    >
       
      <svg
        class="_tadashi_svelte_btn__ripple svelte-rgbdu8"
        viewBox="0 0 600 600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="svelte-rgbdu8"
          cx="300"
          cy="300"
          r="300"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`Btn should match snapshot with slot 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn xxx svelte-rgbdu8"
      type="button"
    >
      xxx
       
      <svg
        class="_tadashi_svelte_btn__ripple svelte-rgbdu8"
        viewBox="0 0 600 600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="svelte-rgbdu8"
          cx="300"
          cy="300"
          r="300"
        />
      </svg>
    </button>
  </div>
</body>
`;
